2001-11-03  John Harper  <jsh@unfactored.org>

	Fixed bug where Nautilus windows often don't get focused in
	focus follows mouse mode:

	* windows.c (focus_on_window): don't call XSetInputFocus ()
	directly store the parameters for later

	(commit_queued_focus_change): new function, calls
	XSetInputFocus () if there's a queued focus change waiting

	* events.c (handle_input_mask): call commit_queued_focus_change
	() before exiting

2001-10-21  John Harper  <jsh@unfactored.org>

	Fixed bug where warp-cursor doesn't invalidate the pointer
	location cache:

	* functions.c (Fwarp_cursor): call
	invalidate_cached_mouse_position after warping the cursor

	* events.c (invalidate_cached_mouse_position): new function

2001-10-14  John Harper  <jsh@unfactored.org>

	* version 1.0.1

2001-08-31  John Harper  <jsh@pixelslut.com>

	* windows.c (focus_on_window): subtract one from the last seen
	server timestamp when sending the WM_TAKE_FOCUS message. The
	explanatory comment in the source reads:

	The -1 is an Ugly Hack. The problem is with the case where the
	window focuses itself after receiving the WM_TAKE_FOCUS
	message. If during the time between us sending the client
	message and the window focusing itself we focused another
	window using the same timestamp, the original window (that
	received the client message) will still get focused.

	I'm assuming that it's unlikely that two events will arrive
	generating focus changes with timestamps that only differ by
	one..

2001-08-24  John Harper  <jsh@pixelslut.com>

	* events.c (unmap_notify): call remove_window () on unmapped
	(withdrawn) windows. This fixes some standards-compliance bugs
	due to us handling windows differently the second time they're
	mapped than the first

2001-07-02  John Harper  <jsh@pixelslut.com>

	* version 0.99

2001-06-20  John Harper  <jsh@pixelslut.com>

	* sawmill_subrs.h, multihead.c, main.c, Makefile.in: support a
	`--multiehead' command-line option. When given and the X server